style.css
html
{
  overflow-x: hidden;
  scroll-behavior: smooth;
}

body
{
  font-family: 'Poppins',sans-serif;
  font-size: normal;
  font-weight: normal;
  font-style: normal;
  line-height: normal;
  color: #000000;
  pointer-events: none;

  padding-bottom: 40px;
  margin: 0px;
}

.page1
{
  background-color: #F3F3F3;
  padding-left: 13.76%;
  height: 100vh;
  font-family: 'Poppins', sans-serif;
  position: relative;
}

.header
{
  padding-bottom: 20px;
}

.header::after
{
  content: "";
  clear: both;
  display: table;
}

#profilePic
{
  height: 160px;
  padding-right: 20px;
}

#tagline
{
  font-family: 'Roboto Condensed','Poppins', sans-serif;
  display: inline-block;
  padding-bottom: 0px;
}

.intro
{
  position: absolute;
  transform: translateY(50%);
  padding-right: 40px;
  max-width: 830px;
}

.header h1
{
  padding-top: 36px;
  font-family: 'PT Serif', 'Poppins', sans-serif;
  letter-spacing: 0:04em;
  font-size: 55px;
  font-weight: bold;
  font-style: normal;
  line-height: 110%;
  margin: 0px;
}

.intro h2
{
  font-size: 22px;
  font-weight: normal;
  font-style: normal;
  padding-bottom: 15px;
  letter-spacing: 0.04em;
  margin: 0px;
}

.intro a
{
  color: #000000;
  text-decoration: none;

}

.intro a:hover
{
  color: #A02CC9;
}

#button
{
  font-family: 'Roboto Condensed','Poppins', sans-serif;
  font-weight: normal;
  letter-spacing: 0.04em;
  font-size: 22px;
  background-color:#A02CC9;
  cursor: pointer;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 20px;
  padding-right:30px;
  color: #FFFFFF;
  text-decoration: none;
  display: inline-block;
  margin-top: 20px;
}

#button:hover
{
  background-color: #d561fd;
}

#arrow
{
  padding-left: 10px;
  height: 26px;
  width: auto;
  margin: auto 0px;
  display: inline;
  vertical-align: top;
}

.main
{
  padding-top: 70px;
  display: block;
  margin: auto;
  box-sizing: border-box;
}

.row
{
  display: flex;
  flex-flow: wrap;
  max-width: 900px;
  margin: 0px auto;
  justify-content: space-between;
  padding: 0px 10px;
}

.column
{
  display: flex;
  flex-direction: column;
  width: 426px;
}

.item
{
  display: block;
  border-radius: 10px;
  padding: 8px;
  margin-bottom: 15px;
  filter: brightness(100%);
}

.item:hover
{
  background-color: #E7E7E7;
  filter: brightness(70%);
  transition: .2s ease;
  cursor: pointer;

}

.item img
{
  width: 100%;
  height: auto;
}

.item-text
{
  padding: 0px 10px;
  box-sizing: border-box;
}

.item-text h1
{
  font-family: 'Roboto Condensed','Poppins', sans-serif;
  font-size: 18px;
}

.item-text h2
{
  font-family: 'Poppins', sans-serif;
  font-size: 14px;

}

.work-container
{
  box-sizing: inherit;
  display: block;
  padding-bottom: 8px;
  padding-top: 8px;
  position: relative;
  filter: brightness(100%) blur(0px);
  transition: .5s ease;
  box-sizing: inherit;
}

.work-container .work-image
{
  object-fit: cover;
}

.work-container:hover .work-image
{
  transition: .5s ease;
  filter: brightness(40%) blur(2px);
}

.work-container:hover .label
{
  transition: .5s ease;
  opacity:1;
}

.label
{
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  background-color: white;
  font-size: 16px;
  padding: 16px 32px;
}

.label img
{
  padding-top: 16px;
}

#cibc
{
  object-position: 5% 50%;
}

#marsh
{
  object-position: 25% 50%;
}

.modal
{
    transition: .2s ease;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 1;
    background-color: rgba(0,0,0,0.8);
    width: 100%;
    height: 100%;
    display:none;
    align-items: flex-start;
}

.modal-content
{
  background-color: #E7E7E7;
  overflow: auto;
  max-height: 90%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  position: relative;
}

.modal-content h1
{
  font-family: 'PT Serif', 'Poppins', sans-serif;
  font-size: 24px;
}

.modal-content p
{
  font-family: 'Poppins',sans-serif;
  padding-bottom: 10px;
}


#close
{
  position: fixed;
  right: 30px;
  top: 30px;
}

#close:hover
{
  cursor: pointer;
}

#arduinoPiano
{
  box-sizing: border-box;
  display: none;
  width:70%;
  height: auto;
  padding: 40px 200px 0px;
}

#CrossFit
{
  display: none;
  width:75%;
  height: auto;
  padding: 20px;
}

#mentalHealth
{
  display: none;
  width:75%;
  height: auto;
  padding: 20px;
}

#bHand
{
  width:75%;
  display: none;
  height: auto;
  padding: 20px;
}

@media screen and (max-width: 958px){
  .intro
  {
    max-width: 670px;
  }
}

